# lab05

./: .gitignore  .gitmodules  .travis.yml  README.md
banking/: CMakeLists.txt
banking/_build/: check
banking/tests/: test1.cpp
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp
formatter_lib/: CMakeLists.txt
hello_world/: CMakeLists.txt  hello_world  hello_world.cpp
solver_application/: CMakeLists.txt  solver
solver_lib/: CMakeLists.txt
